[gd_scene load_steps=4 format=3 uid="uid://mkp341llf6ck"]

[ext_resource type="Script" path="res://scenes/component/MenuScreen.gd" id="1_heb4w"]
[ext_resource type="LabelSettings" uid="uid://b2nh6bjr0fkry" path="res://scenes/component/ZoneSubTextLabel.tres" id="2_hgdrt"]
[ext_resource type="Texture2D" uid="uid://cymplh3bnip8n" path="res://art/button.png" id="3_mrt2i"]

[node name="UpgradeMenu" type="Node2D"]
script = ExtResource("1_heb4w")

[node name="MenuBG" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 32.0
offset_bottom = 48.2
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
color = Color(0.447059, 0.447059, 0.447059, 0.211765)

[node name="ZoneText" type="Label" parent="."]
texture_filter = 1
offset_left = 1.0
offset_top = 2.0
offset_right = 323.0
offset_bottom = 75.0
scale = Vector2(0.09, 0.09)
text = "Upgrades!"
label_settings = ExtResource("2_hgdrt")
horizontal_alignment = 1

[node name="JunkingSpeedText" type="Label" parent="."]
texture_filter = 1
offset_left = 1.0
offset_top = 15.0
offset_right = 501.0
offset_bottom = 115.0
scale = Vector2(0.08, 0.08)
text = "Junking Speed"
label_settings = ExtResource("2_hgdrt")

[node name="SpeedUpgradeButton" type="TextureButton" parent="JunkingSpeedText"]
texture_filter = 1
layout_mode = 0
offset_left = 325.0
offset_top = 83.0
offset_right = 341.0
offset_bottom = 99.0
scale = Vector2(3.14, 3.14)
texture_normal = ExtResource("3_mrt2i")

[node name="JunkSpeedDetailText" type="Label" parent="JunkingSpeedText"]
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 333.0
offset_bottom = 123.0
text = "2.5s"
label_settings = ExtResource("2_hgdrt")

[node name="JunkingSpeedPrice" type="Label" parent="JunkingSpeedText"]
layout_mode = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 299.0
offset_bottom = 165.0
text = "$25"
label_settings = ExtResource("2_hgdrt")

[connection signal="button_down" from="JunkingSpeedText/SpeedUpgradeButton" to="." method="_on_speed_upgrade_button_button_down"]
